--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "i": "npm prune; npm update; cd reveal.js; npm prune; npm update --production",
-    "s": "./node_modules/.bin/serve"
+    "s": "./node_modules/.bin/puer",
+    "s.old": "./node_modules/.bin/serve"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/Yvem/apero-techno-node-angular-lemonde",
   "dependencies": {
+    "puer": "^1.0.8",
     "serve": "^1.4.0"
   }
 }
